replace dropdown menus in navbar as it was causing overflow issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,9 +13,6 @@
     margin: 0;
     -moz-appearance: textfield !important;
   }
-  .dropDownMenu {
-    left: min(100vw - 18rem, -200%);
-  }
   @media (min-width: 768px) {
     .dropDownMenu {
       left: min(100vw - 18rem, 0%);
